Hero spacing fix

--- a/app/globals.css
+++ b/app/globals.css
@@ -49,7 +49,6 @@ span {
 h1 {
   font-size: 10rem;
   line-height: 80%;
-
   text-transform: uppercase;
   letter-spacing: -3px;
 }
@@ -134,7 +133,7 @@ input:focus {
   }
 
   h1 {
-    font-size: 8rem;
+    font-size: 7.5rem;
   }
 
   p,
